dropshot/tests/fail/bad_trait_endpoint2.stderr
error: endpoint handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<Self::Context>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               [body_param: TypedBody<J>,]
               [body_param: UntypedBody,]
               [body_param: StreamingBody,]
               [raw_request: RawRequest,]
           ) -> Result<HttpResponse*, impl HttpResponseError>
  --> tests/fail/bad_trait_endpoint2.rs:11:7
   |
11 | trait MyApi {
   |       ^^^^^

error: endpoint `ref_self_method` must not have a `self` argument
  --> tests/fail/bad_trait_endpoint2.rs:16:9
   |
16 |         &self,
   |         ^^^^^

error: endpoint `mut_self_method` must not have a `self` argument
  --> tests/fail/bad_trait_endpoint2.rs:22:9
   |
22 |         &mut self,
   |         ^^^^^^^^^

error: endpoint `self_method` must not have a `self` argument
  --> tests/fail/bad_trait_endpoint2.rs:28:9
   |
28 |         self,
   |         ^^^^

error: endpoint `self_box_self_method` must not have a `self` argument
  --> tests/fail/bad_trait_endpoint2.rs:34:9
   |
34 |         self: Box<Self>,
   |         ^^^^^^^^^^^^^^^

error: endpoint `self_arc_self_method` must not have a `self` argument
  --> tests/fail/bad_trait_endpoint2.rs:40:9
   |
40 |         self: Arc<Self>,
   |         ^^^^^^^^^^^^^^^
